Fix bug: when using chapterInCollection elements, there was no way to get the chapter title in a header or footer.  Also added chapterInCollectionAuthor element so that one could get the author(s) of a chapter in a collection to show in a header or footer.  Improve page-breaking of interlinear texts, especially when using automatic wrapping.  In particular, the title/line number should no longer appear alone at the bottom of a page and also, longer interlinears should be split across the page boundary instead of sometimes being kept together.

--- a/css/XLingPap.css
+++ b/css/XLingPap.css
@@ -5112,6 +5112,14 @@ chapterTitle
 {
 	content:"";
 }
+chapterInCollectionAuthor:before
+{
+	content:"chapter in collection author";
+}
+chapterInCollectionAuthor
+{
+	display:inline;
+}
 chapterInCollectionBackMatterLayout:before
 {
 	property-group: collasper( " Chapter in Collection Back Matter Layout: " );
